discussion/kv_engine/174256/174256_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix DefragmenterTest.MaxDefragValueSize test on big endian

Change-Id: Ie857808ed9a08be29c1cba5c09dd47c040466b7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vivian Kong
Date: 2022-05-24 13:20:51.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-24 13:23:33.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46385/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19850/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19850/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20513/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20513/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27898/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27898/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7436/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18699/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18699/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7335/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7335/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19499/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19499/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17722/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:228:26: error: expected ">" [clang-diagnostic-error]
             static_cast<PRIu32>(nbins) - 1);
                         ^
                         >
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:228:25: note: to match this "<"
             static_cast<PRIu32>(nbins) - 1);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:228:26: error: type name requires a specifier or qualifier [clang-diagnostic-error]
             static_cast<PRIu32>(nbins) - 1);
                         ^
/usr/include/inttypes.h:104:18: note: expanded from macro "PRIu32"
# define PRIu32         "u"
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17722/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:228:26:
error: expected ">" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17722/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16751/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:14:40.000000000
Message: 
Patch Set 5:

No Builds Executed
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:14:50.000000000
Message: 
Patch Set 5:

No Builds Executed
----------------------------------------------------------------------------------------------------------------------
